client/assets/styles/scss/home/home-layout.scss
// home
.home {

  body {
    background: $purple-dark;
  }

  .content-wrapper {
    display: flex;
    flex-direction: column;
    min-height: 100vh;
  }
}

.home-header {
  background: rgba($purple-dark,.75);
  border-bottom: 1px solid #4d2d67;
  display: flex;
  justify-content: center;
  margin: 0 auto;
  max-width: 1200px;
  overflow-y: auto;
  padding: 12px 0 6px;
  white-space: nowrap;
  width: 100%;

  .link {
    color: $purple-lighter;
    font-size: 14px;
    line-height: 45px;
    margin: 0 21px;
    text-align: center;
    text-decoration: none;

    // @media (max-width: 405px) {
    //   width: 100%;
    // }

    &:hover,
    &:active {
      color: $white;
    }
  }
}

// hero
.home-hero {
  background: url(/build/images/home/hero-bg.svg) no-repeat center top;
  background-size: 900px 395px;
  flex: 1 1 auto;
  flex-direction: column;
  padding: 225px 0 90px;

  @media (max-width: 850px) {
    .br {
      display: none;
    }
  }

  @media (max-width: 600px) {
    flex: 0 0 auto;
  }

  @media (max-width: 500px) {
    padding-top: 90px;
  }

  .logo {
    display: block;
    height: 72px;
    margin: 0 auto 15px;
    width: 390px;

    @media (max-width: 500px) {
      height: auto;
      margin-bottom: 30px;
      width: 60%;
    }
  }

  // h1
  .h1 {
    color: $white;
    font-size: 21px;
    font-style: italic;
    font-weight: 200;
    line-height: 1.4;
    margin: 0 auto;

    @media (max-width: 850px) {
      padding: 0 30px;
      width: 425px;
    }

    @media (max-width: 500px) {
      margin-top: 15px;
      width: auto;
    }
  }

  // columns
  .row {
    margin: 30px auto;
    width: 850px;

    @media (max-width: 850px) {
      width: 425px;
    }

    @media (max-width: 500px) {
      margin: 15px auto;
      width: auto;
    }
  }

  .p {
    color: $purple-lighter;
    float: left;
    font-size: 18px;
    padding: 15px;
    width: 50%;

    @media (max-width: 850px) {
      float: none;
      padding: 15px 30px;
      width: auto;
    }
  }

  .p,
  .small,
  .link {
    font-weight: 300;
  }

  // video
  .link {
    color: $white;
    cursor: pointer;
    display: table;
    font-size: 15px;
    font-weight: $weight-normal;
    height: 24px;
    margin: 30px auto 9px;
    opacity: .75;
    text-decoration: none;

    @media (max-width: 850px) {
      margin-top: 0;
    }

    &:hover,
    &:active {
      opacity: 1;
    }

    .svg {
      height: 15px;
      position: relative;
      top: 3px;
      width: 24px;
    }
  }

  // codesnippets alert
  .alert {
    border-radius: $input-border-radius;
    border-width: 1px;
    display: table;
    font-size: 13px;
    font-weight: $weight-bold;
    height: $input-sm;
    line-height: $input-line-height-sm;
    margin: 0 auto 15px;
    padding: 0 15px;

    &.purple {
      background: $purple;
      border-color: $purple-light;
      color: $white;
    }

    .btn-xxs {
      border: 0;
      line-height: 18px;
      margin-left: 15px;
      padding: 0 6px;
    }
  }

  // modal
  .modal-backdrop {
    background: $black;
    padding: 60px;

    @include media(xs) {
      padding: 60px 0;
    }

    .btn-sm {
      color: $gray-lighter;
      left: -15px;
      line-height: 36px;
      position: absolute;
      top: -$input-md;

      &:hover,
      &:active {
        color: $white;
      }
    }
  }

  .icons-close {
    height: 100%;
  }
}

// embed
.embed-video {
  animation: scale-in-modal .2s ease-in forwards;
  height: 100%;
  position: relative;
  width: 100%;
  z-index: $z-modal;

  .iframe {
    border-radius: 6px;
    height: 100%;
    position: absolute;
    top: 0;
    width: 100%;
  }
}

.home-modal-dialog {
  max-width: 375px;

  .icons-close {
    color: $gray-light;
    cursor: pointer;
    pointer-events: auto;
    position: absolute;
    right: 15px;
    top: 18px;

    &:hover {
      color: $gray;
    }

    &:active {
      color: $red;
    }
  }

  .modal-body {
    padding: 24px 30px;
    text-align: center;

    .span {
      font-size: 21px;
      margin: 12px 0 21px;
    }

    .small {
      color: $gray;
      margin-top: 21px;
    }
  }

  .link {
    color: currentColor;
  }

  .modal-footer {
    color: $gray;
    text-align: center;
  }
}

